Fixed forked banner on mobile

--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -105,4 +105,8 @@
   right: 0;
   display: block;
   z-index: 100;
+
+  @media (max-width: 700px) {
+    display: none;
+  }
 }
